k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digital-classroom
  labels:
    name: digital-classroom
    app: digital-classroom
